[gd_scene load_steps=2 format=2]

[ext_resource path="res://game_scenes/level_interactables/object_container.gd" type="Script" id=1]

[node name="ObjectContainer" type="Node2D" groups=["object_container"]]
script = ExtResource( 1 )

[node name="JumpPosition" type="Position2D" parent="."]
position = Vector2( 0, -75 )

[node name="FacePosition" type="Position2D" parent="."]
position = Vector2( 0, -30 )

[node name="FloorPosition" type="Position2D" parent="."]
position = Vector2( 0, -11 )
